[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "proof-of-work"
version = "1.0.0"
description = "High-performance Proof-of-Work library with support for 34 hash algorithms"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "QudsLab", email = "contact@qudslab.com"},
]
keywords = ["proof-of-work", "crypto", "hash", "blake2", "sha3", "md5", "ripemd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/QudsLab/Proof-of-work"
Documentation = "https://github.com/QudsLab/Proof-of-work#readme"
"Bug Reports" = "https://github.com/QudsLab/Proof-of-work/issues"
"Source Code" = "https://github.com/QudsLab/Proof-of-work"

[tool.setuptools]
packages = ["python"]

[tool.setuptools.package-dir]
"" = "python"
